# crypto

./: CMakeLists.txt  LICENSE  README.md  al_gamal.c  al_gamal_sign.c  al_gamal_simple.c  crypto.h  custom_math.h  diffie_hellman.c  index_calculus.c  inverse.c  powering.c  rsa-sign.c  rsa.c  rsa_simple.c  sha256_hash.c  shamir.c  shamir_simple.c
